--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="nvvv">
         <a href="./index.html" class="page-title header-logo">Web<span class="studio">Studio</span></a>
           <ul class="menuu">
-            <li class="menufile-li-header"><a href="./index.html" class="current">Studio</a></li>
+            <li class="menufile-li-header"><a href="./index.html" class="menufiles current">Studio</a></li>
             <li class="menufile-li-header"><a href="" class="menufiles">Portfolio</a></li>
             <li class="menufile-li-header"><a href="" class="menufiles">Contacts</a></li>
           </ul>
@@ -32,6 +32,11 @@
         <li><a href="tel:+110001111111" class="number">+11 (000) 111-11-11</a></li>
       </ul>
         </address>
+        <button class="burger-btn" type="button" >
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
 
       <div class="mobile-container backdrop ">
@@ -59,7 +64,7 @@
       </div>
    </header>
 
-  <main>
+  <!-- <main>
   <section class="sect sect-hidden">
     <div class="container">
   <h1 class="effective">Effective Solutions for Your Business</h1>
@@ -368,11 +373,11 @@ Subscribe
 </button>
   </form>
   </div>
-</div>
+</div> -->
 
  </footer>
  <!-- Modal screen -->
-<div class="modal-overlay backdrop" id="modalBackdrop">
+<!-- <div class="modal-overlay backdrop" id="modalBackdrop">
   <div class="modal">
     <button type="button" class="but-hidden-overplay" id="closemodal">
       <svg class="modal-overlay-svgfile-but" width="8" height="8">
@@ -427,6 +432,7 @@ Subscribe
       <button class="modal-button" type="submit">Send</button>
     </form>
   </div>
-</div>
+</div> -->
+
 </body>
 </html>
