--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
       </div>
    </header>
 
-  <!-- <main>
+  <main>
   <section class="sect sect-hidden">
     <div class="container">
   <h1 class="effective">Effective Solutions for Your Business</h1>
   <button type="button" class="but">Order Service</button>
   </div>
   </section>
-  
-  <section class="page">
+  </main>
+  <!-- <section class="page">
     <div class="container">
     <h2 class="visually-hidden">Benefits</h2>
   <ul class="secondpage">
@@ -373,7 +373,7 @@ Subscribe
 </button>
   </form>
   </div>
-</div> -->
+</div> --> -->
 
  </footer>
  <!-- Modal screen -->
