--- a/index.html
+++ b/index.html
@@ -72,18 +72,20 @@
   </div>
   </section>
   </main>
-  <!-- <section class="page">
+
+
+   <section class="page">
     <div class="container">
     <h2 class="visually-hidden">Benefits</h2>
   <ul class="secondpage">
-  <li class="goals"><div class="icon-first-text">
+  <li class="page-items"><div class="icon-first-text">
   <svg class="page-logo-icon" width="64" height="64">
   <use href="./images/icons.svg#icon-antenna-1"></use>
 </svg>
   </div>
   <h3 class="str">Strategy</h3>
   <p class="ggoal">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-  <li class="goals">
+  <li class="page-items">
     <div class="icon-first-text">
       <svg class="page-logo-icon" width="64" height="64">
       <use href="./images/icons.svg#icon-clock-1"></use>
@@ -91,7 +93,7 @@
       </div>
     <h3 class="str">Punctuality</h3>
   <p class="ggoal">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-  <li class="goals">
+  <li class="page-items">
     <div class="icon-first-text">
       <svg class="page-logo-icon" width="64" height="64">
       <use href="./images/icons.svg#icon-diagram-1"></use>
@@ -99,7 +101,7 @@
       </div>
     <h3 class="str">Diligence</h3>
   <p class="ggoal">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-  <li class="goals">
+  <li class="page-items">
     <div class="icon-first-text">
       <svg class="page-logo-icon" width="64" height="64">
       <use href="./images/icons.svg#icon-astronaut-1"></use>
@@ -115,7 +117,7 @@
   <div class="container">
   <h2 class="team">Our Team</h2>
  <ul class="teams">
- <li class="goteam"><img src="./images/tty.jpg"  width="264" alt="Mark Guerro"/>
+ <li class="goteam"><img src="./images/tty.jpg" class="main-photo" width="264" alt="Mark Guerro"/>
  <div class="afff"><h3 class="teamgo">Mark Guerrero</h3>
  <p class="parag">Product Designer</p>
 
@@ -150,7 +152,7 @@
 </li>
 </ul>
 </div></li>
- <li class="goteam"><img src="./images/Goit.jpg"  width="264" alt="Tom Ford" />
+ <li class="goteam"><img src="./images/Goit.jpg" class="main-photo" width="264" alt="Tom Ford" />
   <div class="afff"><h3 class="teamgo">Tom Ford</h3>
  <p class="parag">Frontend Developer</p>
  <ul class="icons-number-three">
@@ -184,7 +186,7 @@
   </li>
   </ul>
 </div></li>
- <li class="goteam"><img src="./images/ggoo.jpg"  width="264" alt="Camila Garcia" />
+ <li class="goteam"><img src="./images/ggoo.jpg" class="main-photo" width="264" alt="Camila Garcia" />
   <div class="afff"><h3 class="teamgo">Camila Garcia</h3>
  <p class="parag">Marketing</p>
  <ul class="icons-number-three">
@@ -218,7 +220,7 @@
   </li>
   </ul>
 </div></li>
- <li class="goteam"><img src="./images/ggo.jpg"  width="264" alt="Daniel Wilson" />
+ <li class="goteam"><img src="./images/ggo.jpg" class="main-photo" width="264" alt="Daniel Wilson" />
   <div class="afff"><h3 class="teamgo">Daniel Wilson</h3>
  <p class="parag">UI Designer</p>
  <ul class="icons-number-three">
@@ -255,11 +257,13 @@
 </ul>
 </div>
  </section>
- <section class="secta">
+
+ 
+ <section class="portfolio">
   <div class="container">
-    <h2  class="port">Our Portfolio</h2>
+    <h2 class="title port">Our Portfolio</h2>
   <ul class="option">
-<li class="pych">
+<li class="portfolio-item">
   <div class="portfolio-items"><img src="./images/One.jpg"  width="360" alt="Banking App"/>
   <p class="hidden-text">
     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -267,7 +271,7 @@
   </div>
 <div class="block"><h3 class="bank">Banking App</h3>
 <p class="papp">App</p></div></li>
-<li class="pych">
+<li class="portfolio-item">
   <div class="portfolio-items"><img src="./images/two.jpg"  width="360" alt="Cashless Payment" />
     <p class="hidden-text">
       14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -277,7 +281,7 @@
 
   <div class="block"><h3 class="bank">Cashless Payment</h3>
 <p class="papp">Marketing</p></div></li>
-<li class="pych">
+<li class="portfolio-item">
   
   <div class="portfolio-items"> <img src="./images/three.jpg"  width="360" alt="Meditation App" />
     <p class="hidden-text">
@@ -288,7 +292,7 @@
   <div class="block"><h3 class="bank">Meditation App</h3>
 <p class="papp">App</p></div></li>
 
-<li class="pych">
+<li class="portfolio-item">
   <div class="portfolio-items">
 <img src="./images/four.jpg"  width="360" alt="Taxi Service"/>
 <p class="hidden-text">
@@ -298,7 +302,7 @@
   <div class="block"><h3 class="bank">Taxi Service</h3>
 <p class="papp">Marketing</p></div></li>
 
-<li class="pych">
+<li class="portfolio-item">
   <div class="portfolio-items">
   <img src="./images/five.jpg"  width="360" alt="Screen Illustrations" />
   <p class="hidden-text">
@@ -307,7 +311,7 @@
 </div>
   <div class="block"><h3 class="bank">Screen Illustrations</h3>
 <p class="papp">Design</p></div></li>
-<li class="pych">
+<li class="portfolio-item">
   <div class="portfolio-items">
   <img src="./images/six.jpg"  width="360" alt="Meditation App" />
   <p class="hidden-text">
@@ -320,61 +324,74 @@
 </div>
  </section>
  </main>
- <footer class="bakcgr">
-  <div class="container footer-section">
-    <div class="footer-div-section">
-  <a href="./index.html" class="logotwo">Web<span class="stu">Studio</span></a>
-  <p class="fotit">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-  </div>
-  <div class="div-section-social-media">
-    <p class="footer-parag-social-media">Social media</p>
-<ul class="footer-social-media-ul">
-  <li class="footer-element-social-media">
-    <a href="" class="social-links-footer">
-      <svg class="page-logo-icon-footer" width="24" height="24">
-          <use href="./images/icons.svg#icon-instagram"></use>
-        </svg>
-    </a>
-  </li>
-  <li class="footer-element-social-media"><a href="" class="social-links-footer">
-    <svg class="page-logo-icon-footer" width="24" height="24">
-        <use href="./images/icons.svg#icon-twitter"></use>
-      </svg>
-  </a>
-</li>
-  <li class="footer-element-social-media">
-    <a href="" class="social-links-footer">
-      <svg class="page-logo-icon-footer" width="24" height="24">
-          <use href="./images/icons.svg#icon-facebook"></use>
-        </svg>
-    </a>
-  </li>
-  <li class="footer-element-social-media">
-    <a href="" class="social-links-footer">
-      <svg class="page-logo-icon-footer" width="24" height="24">
-          <use href="./images/icons.svg#icon-linkedin"></use>
-        </svg>
-    </a>
-  </li>
-</ul>
-  </div>
+  
+ <footer class="footer">
+  <div class="container footer-container">
+    <div class="footer-container-top">
+      <a class="logo footer-logo" href="./index.html"
+        >Web<span class="span-logo">Studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with
+        digital marketing & growth solutions.
+      </p>
+    </div>
+    <div class="footer-social">
+      <p class="footer-social-text">Social media</p>
+      <ul class="social-list footer-social-list">
+        <li class="social-item">
+          <a href="" class="social-links footer-link">
+            <svg class="social-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="#" class="social-links footer-link">
+            <svg class="social-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="#" class="social-links footer-link">
+            <svg class="social-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-item">
+          <a href="#" class="social-links footer-link">
+            <svg class="social-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
 
-  <div class="modal-hidden">
-  <p class="sub-modal"> Subscribe</p>
-  <form class="modal-form">
-<label class="label-form-modal">
-<input class="footer-email-modal" name="e-mail" type="email" placeholder="E-mail" />
-</label>
-<button class="but-modal-footer" type="submit">
-Subscribe
-<svg class="page-logo-icon-modal" width="24" height="24">
+    <div class="footer-container-form">
+      <p class="footer-social-text">Subscribe</p>
+      <form class="footer-form">
+        <label class="footer-label" for="footer-email">
+          <input
+            class="footer-input"
+            id="footer-email"
+            type="email"
+            name="email"
+            placeholder="E-mail"
+          />
+        </label>
+        <button class="footer-button" type="submit">
+          Subscribe
+<svg class="footer-icon-send" width="24" height="24">
   <use href="./images/symbol-defs.svg#icon-Frame-three"></use>
 </svg>
 </button>
   </form>
   </div>
-</div> --> -->
-
+</div> 
+ 
  </footer>
  <!-- Modal screen -->
 <!-- <div class="modal-overlay backdrop" id="modalBackdrop">
