--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <ul class="secondpage">
   <li class="page-items"><div class="icon-first-text">
   <svg class="page-logo-icon" width="64" height="64">
-  <use href="./images/icons.svg#icon-antenna-1"></use>
+  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
 </svg>
   </div>
   <h3 class="str">Strategy</h3>
@@ -88,7 +88,7 @@
   <li class="page-items">
     <div class="icon-first-text">
       <svg class="page-logo-icon" width="64" height="64">
-      <use href="./images/icons.svg#icon-clock-1"></use>
+      <use href="./images/symbol-defs.svg#icon-clock-1"></use>
     </svg>
       </div>
     <h3 class="str">Punctuality</h3>
@@ -96,7 +96,7 @@
   <li class="page-items">
     <div class="icon-first-text">
       <svg class="page-logo-icon" width="64" height="64">
-      <use href="./images/icons.svg#icon-diagram-1"></use>
+      <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
     </svg>
       </div>
     <h3 class="str">Diligence</h3>
@@ -104,7 +104,7 @@
   <li class="page-items">
     <div class="icon-first-text">
       <svg class="page-logo-icon" width="64" height="64">
-      <use href="./images/icons.svg#icon-astronaut-1"></use>
+      <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
     </svg>
       </div>
     <h3 class="str">Technologies</h3>
