--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </address>
         <button class="burger-btn" type="button" >
           <svg class="burger-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-burger"></use>
+            <use href="./images/icon.svg#icon-burger"></use>
           </svg>
         </button>
       </div>
@@ -124,28 +124,28 @@
 <ul class="icons-number-three">
 <li class="social-media"><a href="" class="social-links">
   <svg class="page-logo-icon" width="16" height="16">
-      <use href="./images/icons.svg#icon-instagram"></use>
+      <use href="./images/symbol-defs.svg#icon-instagram"></use>
     </svg>
 </a>
 
 </li>
 <li class="social-media"><a href="" class="social-links">
   <svg class="page-logo-icon" width="16" height="16">
-      <use href="./images/icons.svg#icon-twitter"></use>
+      <use href="./images/symbol-defs.svg#icon-twitter"></use>
     </svg>
 </a>
 
 </li>
 <li class="social-media"><a href="" class="social-links">
   <svg class="page-logo-icon" width="16" height="16">
-      <use href="./images/icons.svg#icon-facebook"></use>
+      <use href="./images/symbol-defs.svg#icon-facebook"></use>
     </svg>
 </a>
 
 </li>
 <li class="social-media"><a href="" class="social-links">
   <svg class="page-logo-icon" width="16" height="16">
-      <use href="./images/icons.svg#icon-linkedin"></use>
+      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
     </svg>
 </a>
 
