--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container mobile-menu-container ">
           <button type="button" class="but-hidden-overplay" id="closeModal">
             <svg class="modal-overlay-svgfile-but" width="8" height="8">
-              <use href="./images/modal-icons.svg#icon-close-black"></use>
+              <use href="./images/modal-icons.svg#icon-close-black-18dp-2-1"></use>
             </svg>
           </button>
           <nav class="nav-mobile-menu">
@@ -158,28 +158,28 @@
  <ul class="icons-number-three">
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-instagram"></use>
+        <use href="./images/symbol-defs.svg#icon-instagram"></use>
       </svg>
   </a>
   
   </li>
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-twitter"></use>
+        <use href="./images/symbol-defs.svg#icon-twitter"></use>
       </svg>
   </a>
   
   </li>
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-facebook"></use>
+        <use href="./images/symbol-defs.svg#icon-facebook"></use>
       </svg>
   </a>
   
   </li>
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-linkedin"></use>
+        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
       </svg>
   </a>
   
@@ -192,28 +192,28 @@
  <ul class="icons-number-three">
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-instagram"></use>
+        <use href="./images/symbol-defs.svg#icon-instagram"></use>
       </svg>
   </a>
   
   </li>
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-twitter"></use>
+        <use href="./images/symbol-defs.svg#icon-twitter"></use>
       </svg>
   </a>
   
   </li>
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-facebook"></use>
+        <use href="./images/symbol-defs.svg#icon-facebook"></use>
       </svg>
   </a>
   
   </li>
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-linkedin"></use>
+        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
       </svg>
   </a>
   
@@ -226,28 +226,28 @@
  <ul class="icons-number-three">
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-instagram"></use>
+        <use href="./images/symbol-defs.svg#icon-instagram"></use>
       </svg>
   </a>
   
   </li>
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-twitter"></use>
+        <use href="./images/symbol-defs.svg#icon-twitter"></use>
       </svg>
   </a>
   
   </li>
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-facebook"></use>
+        <use href="./images/symbol-defs.svg#icon-facebook"></use>
       </svg>
   </a>
   
   </li>
   <li class="social-media"><a href="" class="social-links">
     <svg class="page-logo-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-linkedin"></use>
+        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
       </svg>
   </a>
   
@@ -342,28 +342,28 @@
         <li class="social-item">
           <a href="" class="social-links footer-link">
             <svg class="social-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-instagram"></use>
+              <use href="./images/symbol-defs.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
           <a href="#" class="social-links footer-link">
             <svg class="social-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-twitter"></use>
+              <use href="./images/symbol-defs.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
           <a href="#" class="social-links footer-link">
             <svg class="social-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-facebook"></use>
+              <use href="./images/symbol-defs.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="social-item">
           <a href="#" class="social-links footer-link">
             <svg class="social-icon" width="24" height="24">
-              <use href="./images/icons.svg#icon-linkedin"></use>
+              <use href="./images/symbol-defs.svg#icon-linkedin"></use>
             </svg>
           </a>
         </li>
@@ -385,7 +385,7 @@
         <button class="footer-button" type="submit">
           Subscribe
 <svg class="footer-icon-send" width="24" height="24">
-  <use href="./images/symbol-defs.svg#icon-Frame-three"></use>
+  <use href="./images/symbol-defs.svg#icon-Frame-3"></use>
 </svg>
 </button>
   </form>
