--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </address>
         <button class="burger-btn" type="button" >
           <svg class="burger-icon" width="24" height="24">
-            <use href="./images/icon.svg#icon-burger"></use>
+            <use href="./images/icon.svg#icon-Vector"></use>
           </svg>
         </button>
       </div>
@@ -394,11 +394,11 @@
  
  </footer>
  <!-- Modal screen -->
-<!-- <div class="modal-overlay backdrop" id="modalBackdrop">
+<div class="modal-overlay " id="modalBackdrop">
   <div class="modal">
     <button type="button" class="but-hidden-overplay" id="closemodal">
       <svg class="modal-overlay-svgfile-but" width="8" height="8">
-        <use href="./images/modal-icons.svg#icon-close-black"></use>
+        <use href="./images/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
       </svg>
     </button>
     <p class="modal-paragraph">Leave your contacts and we will call you back</p>
@@ -417,7 +417,7 @@
         <div class="form-div-email">
           <input type="tel" id="phone" name="phone" class="input-email-username"/>
           <svg class="modal-overlay-svgfile-email" width="18" height="24">
-            <use href="./images/modal-icons.svg#icon-phone-black"></use>
+            <use href="./images/symbol-defs.svg#icon-phone-black-18dp-1"></use>
           </svg>
         </div>
       </div>
@@ -426,7 +426,7 @@
         <div class="form-div-email">
           <input type="email" id="email" name="email" class="input-email-username"/>
           <svg class="modal-overlay-svgfile-email" width="18" height="24">
-            <use href="./images/modal-icons.svg#icon-email-black"></use>
+            <use href="./images/symbol-defs.svg#icon-email-black-18dp-1"></use>
           </svg>
         </div>
       </div>
@@ -439,7 +439,7 @@
         <label class="privacy-label-modal" for="user-privacy">
           <span class="privacy-policy">
             <svg class="svg-private-policy" width="10" height="8">
-              <use href="./images/vector.svg#vector.svg"></use>
+              <use href="./images/symbol-defs.svg#icon-Vector"></use>
             </svg>
           </span>
           I accept the terms and conditions of the 
@@ -449,7 +449,7 @@
       <button class="modal-button" type="submit">Send</button>
     </form>
   </div>
-</div> -->
+</div>
 
 </body>
 </html>
