--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <div class="form-div-email">
           <input type="text" id="user-name" name="user-name" class="input-email-username"/>
           <svg class="modal-overlay-svgfile-email" width="18" height="24">
-            <use href="./images/blackperson.svg#icon-person-blackk"></use>
+            <use href="./images/symbol-defs.svg#icon-person-blackk"></use>
           </svg>
         </div>
       </div>
