--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </address>
         <button class="burger-btn" type="button" >
           <svg class="burger-icon" width="24" height="24">
-            <use href="./images/icon.svg#icon-Vector"></use>
+            <use href="./images/burger.svg#icon-icon-burger"></use>
           </svg>
         </button>
       </div>
